--- a/sumin_homepage.html
+++ b/sumin_homepage.html
@@ -1,5 +1,10 @@
 <html>
-
+    <style>
+        /* 페이지 배경색 변경 */
+        body {
+            background-color:#f0f8ff; /* 연한 파란색 예시 */
+            color: #333; /* 텍스트 색상은 진한 회색 */
+            font-family: Arial, sans-serif;
 <head>
     <title>My Homepage</title>
     <meta charset="utf-8">
@@ -65,7 +70,7 @@
             <a href="https://github.com/sumin2333"> github.com 방문</a>
         </h3>
 
-    
+    </section>
 
      <h3>이번 학기 시간표</h3>
         <table border="1">
@@ -96,5 +101,7 @@
             </tbody>
         </table>
     </ul>
-    <footer>background-color: rgb(125, 125, 194); </footer>
+    <footer> 
+        &copy; 2024 [sumin]. All rights reserved.
+         </footer>
 </body>
