--- a/sumin_homepage2.html
+++ b/sumin_homepage2.html
@@ -32,21 +32,50 @@
             background-color: #fff;
         }
         .dark-mode {
-            background-color: #2c2c2c;
-            color: #ffffff;
-        }
-
-        .dark-mode header, .dark-mode footer, .dark-mode nav {
-            background-color: #1c1c1c;
-        }
-
-        .dark-mode nav a {
-            background-color: #333;
-        }
-
-        .dark-mode nav a:hover {
-            background-color: #444;
-        }
+        background-color: #121212;
+        color: #ffffff;
+    }
+    .dark-mode header, 
+    .dark-mode footer, 
+    .dark-mode nav, 
+    .dark-mode section {
+        background-color: #1c1c1c;
+        color: #ffffff;
+    }
+    .dark-mode nav a,
+    .dark-mode a {
+        color: #bb86fc;
+    }
+    .dark-mode nav h2, 
+    .dark-mode section h3,
+    .dark-mode section h4 { 
+        background-color: #2c2c2c;
+        color: #ffffff;
+    }
+    .dark-mode nav ul,
+    .dark-mode section ul {
+        background-color: #2c2c2c;
+    }
+    .dark-mode table,
+    .dark-mode th,
+    .dark-mode td {
+        border-color: #ffffff;
+        color: #ffffff;
+    }
+    #darkModeToggle {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        padding: 10px;
+        background-color: #D8BFD8;
+        border: none;
+        cursor: pointer;
+        transition: background-color 0.3s, color 0.3s;
+    }
+    .dark-mode #darkModeToggle {
+        background-color: #bb86fc;
+        color: #121212;
+    }
     </style>
 </head>
 
