--- a/sumin_homepage2.html
+++ b/sumin_homepage2.html
@@ -82,7 +82,7 @@
 <body>
     <header>
     <h2>SUMIN Hompage</h2>
-    <p>안녕하세요! 저는 웹 개발자 송수민입니다. 최신 기술을 사용해 사용자 친화적인 웹사이트를 만듭니다.</p>
+    <p> 데이터분석가를 꿈꾸며  열심히 공부하고 있습니다.</p>
     <p>
  
     <img src="profile.jpg" width="100" height="140" alt="프로필 사진">
@@ -92,10 +92,10 @@
             <a href="https://youtu.be/fv3smSEvDpI?si=ukI3ygc4dVgs8ses" target="_blank">music 🎶</a>
         </p>
     </section>
-        <strong> 데이터분석가를 꿈꾸며  열심히 공부하고 있습니다. </strong>
+       
     </header> 
 
-    <button id="darkModeToggle" style="position: fixed; top: 20px; right: 20px;">다크 모드</button>
+    <button id="darkModeToggle" style="position: fixed; top: 20px; right: 20px;"> ⭐</button>
     <style>
         nav h2, 
         section h3,
